<resources>
    <string name="app_name">my_app时晴</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="username_input">请输入您的用户名</string>
    <string name="password_input">请输入您的密码</string>
    <string name="register">登录</string>
    <string name="login">注册</string>
    
    <string name="welcome_title">欢迎使用时晴</string>
    <string name="welcome_desc">一款简洁高效的个人应用，助您轻松管理日常事务</string>
    <string name="btn_start">开始使用</string>
</resources>