<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"/>


    <Button
        android:id="@+id/turn_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintEnd_toStartOf="@id/line_a"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/turn_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintStart_toEndOf="@id/line_a"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/username"
        android:text="@string/user_name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line1"/>


    <EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/username"
        android:hint="@string/username_input"/>

    <TextView
        android:id="@+id/password"
        android:text="@string/password"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <EditText
        android:id="@+id/password_input"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintTop_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="@id/line2"/>


</androidx.constraintlayout.widget.ConstraintLayout>